# qr_live_protocol

./: DEVELOPMENT.md  Dockerfile  Dockerfile.dev  Makefile  QUICKSTART.md  README.md  demo_identity.json  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.cursor/: rules
.github/workflows/: ci.yml
docs/: API.md  AUTHENTICATION_CHALLENGES.md  COGNITIVE_SECURITY.md  CONFIGURATION.md  CONTRIBUTING.md  CodeStream_003-1.md  FAQ.md  FEATURE_REQUESTS.md  INDEX.md  INSTALLATION.md  README.md  STREAMING.md  describe_functions.py  describe_functions_examples.md  describe_functions_src.md  describe_functions_tests.md  test_framework.md
examples/: livestream_demo.py
qr_live_protocol.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: dev.sh
src/: __init__.py  __main__.py  blockchain_verifier.py  cli.py  config.py  core.py  identity_manager.py  qr_generator.py  time_provider.py  web_server.py
templates/: admin.html  index.html  viewer.html
tests/: __init__.py  conftest.py  test_core.py
tests/acceptance/: __init__.py  test_user_scenarios.py
tests/integration/: __init__.py  test_core_integration.py
tests/performance/: __init__.py
tests/security/: __init__.py
tests/system/: __init__.py  test_full_workflow.py
tests/unit/: __init__.py  test_qr_data.py
